--- a/lab2/work_samples.html
+++ b/lab2/work_samples.html
@@ -12,33 +12,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work Samples</title>
+    <link rel="stylesheet" type="text/css" href="Lab2_ejcohe22.css" />
 </head>
 <body>
-<nav>
-    <a href="Lab1_ejcohe22.html">Back to Main Page</a>
-</nav>
-<h1>Work Samples</h1>
-<audio controls loop>
-    <source src="website_track.mp3" type="audio/mp3">
-</audio>
-<p>a short composition for this page | Erik Cohen, 2021<sup>&copy;</sup></p>
-    <h3>Professional Accounts</h3>
-        <ul>
-            <li><a href="https://github.com/ejcohe22">Github</a></li>
-            <li><a href="https://leetcode.com/littleeagle/">LeetCode</a></li>
-            <li><a href="https://www.linkedin.com/in/erik-cohen/">Linkedin</a></li>
-        </ul>
-    <h3>Featured Projects</h3>
-        <ul>
-            <li><a href="https://dacst.herokuapp.com/">Demo NoSQL Database &amp; UI</a></li>
-            <li><a href="https://cs321-project3-website.herokuapp.com/">Flask To Do List App Deployed with Github Actions CI</a></li>
-            <li><a href="https://www.instructables.com/Granular-Granular-Synthesis/">Granular-Granular-Synthesis Interactive Instrument</a></li>
-        </ul>
-    <h3>Released Music</h3>
-        <ul>
-            <li><a href="https://open.spotify.com/artist/0MPNP3EHTnKUpCCcuHPrlB?si=Om7yx3YOTTWSAfYaSIuPrw">The Verticals (Founded in high school)</a></li>
-            <li><a href="https://open.spotify.com/album/271ksDLLgEbhNniL1ITeEJ?si=RVwdpxvJTU-UT1UuBm4AHQ">Hyper Pop EP Collaboration with Ben Lawler </a></li>
-            <li><a href="https://open.spotify.com/track/0vqUlJHJzYqybCczlcsqW4?si=f70c091f4841415b">Most Recent Release</a></li>
-        </ul>
+<nav><ul id=navbar>
+    <li><a href="index.html" class=nav>Back to Main Page</a></li>
+</ul></nav>
+<section class=art>
+    <div class=art>
+        <h1 class=centered>Work Samples</h1>
+        <audio controls loop>
+            <source src="website_track.mp3" type="audio/mp3">
+        </audio>
+        <p>a short composition for this page | Erik Cohen, 2021<sup>&copy;</sup></p>
+            <h3>Professional Accounts</h3>
+                <ul>
+                    <li><a href="https://github.com/ejcohe22">Github</a></li>
+                    <li><a href="https://leetcode.com/littleeagle/">LeetCode</a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-cohen/">Linkedin</a></li>
+                </ul>
+            <h3>Featured Projects</h3>
+                <ul>
+                    <li><a href="https://dacst.herokuapp.com/">Demo NoSQL Database &amp; UI</a></li>
+                    <li><a href="https://cs321-project3-website.herokuapp.com/">Flask To Do List App Deployed with Github Actions CI</a></li>
+                    <li><a href="https://www.instructables.com/Granular-Granular-Synthesis/">Granular-Granular-Synthesis Interactive Instrument</a></li>
+                </ul>
+            <h3>Released Music</h3>
+                <ul>
+                    <li><a href="https://open.spotify.com/artist/0MPNP3EHTnKUpCCcuHPrlB?si=Om7yx3YOTTWSAfYaSIuPrw">The Verticals (Founded in high school)</a></li>
+                    <li><a href="https://open.spotify.com/album/271ksDLLgEbhNniL1ITeEJ?si=RVwdpxvJTU-UT1UuBm4AHQ">Hyper Pop EP Collaboration with Ben Lawler </a></li>
+                    <li><a href="https://open.spotify.com/track/0vqUlJHJzYqybCczlcsqW4?si=f70c091f4841415b">Most Recent Release</a></li>
+                </ul>
+    </div>
+</section>
 </body>
 </html>
