--- a/lab2/index.html
+++ b/lab2/index.html
@@ -16,16 +16,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 1: Online Resume</title>
+    <title>Lab 2: Stylized Online Resume</title>
+    <link rel="stylesheet" type="text/css" href="Lab2_ejcohe22.css" />
 </head>
 <body>
-<nav>
-    <a href="#About">About Me</a>  |
-    <a href="#Education">Education</a>  |
-    <a href="#Work">Work Experience</a>  |
-    <a href="#Skills">Skills</a>  |
-    <a href="work_samples.html">Work Samples</a>
-</nav>
+<nav><ul id=navbar>
+    <li><a href="#About" class=nav>About Me</a></li>
+    <li><a href="#Education" class=nav>Education</a></li>
+    <li><a href="#Work" class=nav>Work Experience</a></li>
+    <li><a href="#Skills" class=nav>Skills</a></li>
+    <li><a href="work_samples.html" class=nav>Work Samples</a></li>
+</ul></nav>
 
 <header>
     <section id= "About">
@@ -81,6 +82,11 @@
 <section id= "Skills">
 <h2>Skills</h2>
     <table>
+        <colgroup>
+            <col>
+            <col class = middle>
+            <col>
+          </colgroup>
         <tr>
             <th>Programming Languages</th> <th>Data Science Experience</th> <th>Music</th>
         </tr>
